openshift/deploy-slam-app.yml
# @format

apiVersion: apps/v1
kind: Deployment
metadata:
  name: slam-app
  namespace: ca94a8-tools
  labels:
    app: slam-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: slam-app
      deployment: slam-app
  template:
    metadata:
      labels:
        app: slam-app
        deployment: slam-app
        role: frontend
    spec:
      containers:
        - name: slam-app
          image: ghcr.io/bcgov/slam-app:ff5ceab
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: slam-app
  namespace: ca94a8-tools
  labels:
    app: slam-app
spec:
  ports:
    - name: 3000-tcp
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: slam-app
    deployment: slam-app
    role: frontend
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: slam-app
  namespace: ca94a8-tools
  labels:
    app: slam-app
spec:
  host: slam-ca94a8-tools.apps.silver.devops.gov.bc.ca
  to:
    kind: Service
    name: slam-app
    weight: 100
  port:
    targetPort: 3000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
